--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                           </div>
                     </div>
                     <div class="list-chat">
-                        <div class="d-flex pb-2" v-for="(c, i) in contacts" :class="{'active': i == 3}">
+                        <div class="d-flex pb-2" v-for="(c, i) in contacts" :class="(i == currentContact)? 'active' : ''" @click="currentContact = i">
                             <div class="img-box" id="image-size">
                                 <img :src="c.avatar" :alt="c.name">
                             </div>
@@ -87,7 +87,7 @@
                                     Ultimo messaggio inviato
                                 </div>
                             </div> 
-                            <div class="pe-2 pt-4 text-size text-secondary">
+                            <div class="pe-3 pt-4 text-size text-secondary">
                                 12:00
                             </div>
                         </div>                       
@@ -98,11 +98,11 @@
                     <header>
                         <div class="d-flex">
                             <div class="img-box">
-                                <img src="/img/avatar_1.jpg" alt="Michele">
+                                <img :src="contacts[currentContact].avatar" :alt="contacts[currentContact].name">
                             </div>
                             <div class="d-flex flex-column">
                                 <div class="user">
-                                    Michele
+                                    {{contacts[currentContact].name}}
                                 </div>
                                 <div class="text-secondary">
                                     Ultimo accesso oggi alle 12:00
@@ -122,35 +122,15 @@
                         </div>
                     </header>
                     <main>
-                        <div class="message-box sent">
-                            <div class="message-object">
-                                <div class="text">
-                                    Ciao come stai?
-                                </div>
-                                <div class="time text-secondary">
-                                    11:50
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="message-box received">
-                            <div class="message-object">
-                                <div class="text">
-                                    Tutto bene grazie
-                                </div>
-                                <div class="time text-secondary">
-                                    11:55
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="message-box sent">
-                            <div class="message-object">
-                                <div class="text">
-                                    Mi fa piacere!
-                                </div>
-                                <div class="time text-secondary">
-                                    11:58
+                        <div v-for="(elem, i) in contacts[currentContact].messages">
+                            <div class="message-box" :class="(contacts[currentContact].messages[i].status === 'sent') ? 'sent' : 'received'">
+                                <div class="message-object">
+                                    <div class="text">
+                                        {{contacts[currentContact].messages[i].message}}
+                                    </div>
+                                    <div class="time text-secondary">
+                                        {{contacts[currentContact].messages[i].date}}
+                                    </div>
                                 </div>
                             </div>
                         </div>
